# 3-python-package-exercise-experientia

./: .gitignore  MANIFEST.in  Pipfile  README.md  instructions.md  myproject.toml  pyproject.toml  requirements.txt
.github/workflows/: node.js.yml  python.yml
src/data/: lines.json  lines.txt  templates.json
src/pyrizz/: __main__.py  pickuplines.py  pyrizz.py  templates.py
src/pyrizz/data/: ascii_art.txt
src/scripts/: extract.py  mongo-seed.py
tests/: test_pyrizz.py
